# VKInterface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VKInterface.cpp  VKInterface.hpp
docs/: CMakeLists.txt  Doxyfile.in
exemples/: logger.hpp  utilities.hpp
exemples/compute_texture/: CMakeLists.txt  compute_texture.cpp
exemples/compute_texture/shaders/: CMakeLists.txt
exemples/simple_triangle/: CMakeLists.txt  simple_triangle.cpp
exemples/simple_triangle/shaders/: CMakeLists.txt  quad.frag  quad.vert
